bugfix/header-z-index

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,3 +1,7 @@
+.page-header {
+  position: relative;
+  z-index: 900;
+}
 .page-header__container {
   background-color: transparent;
   display: flex;
